# AI-tsumutsumu-aerial

./: .gitignore  compose.ci.yml  compose.prod.yml  compose.yml
.github/workflows/: ci.yml
bot/: Dockerfile  Dockerfile.ci  db_push.sh  pyproject.toml  schema.prisma  tox.ini  wait-for-pg.sh
bot/src/: .gitignore  bot.py  channel.py  chatgpt.py  func.json  init_qdrant.py  seed.py
bot/src/cogs/: main_cog.py
bot/src/db_api/: __init__.py  postgres_api.py
bot/src/prompts/: tsumugi_normal.txt
bot/src/tests/: test_connection.py
bot/tests/: test_connection.py  test_of_test.py
web/: package-lock.json  package.json
web/prisma/: schema.prisma  seed.ts
web/prisma/migrations/20240606084143_init/: migration.sql
web/prisma/migrations/20240606091639_init/: migration.sql
web/prisma/migrations/20240611013320_first/: migration.sql
