[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Chroma7p <nahco3,hcl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
python-dotenv = "^1.0.1"
openai = "^1.17.1"
qdrant-client = "^1.8.2"
tiktoken = "^0.6.0"
tox = "^4.15.0"
pytest = "^8.2.1"
psycopg2-binary = "^2.9.9"
prisma = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
